[package]
name = "BLHACompare"
version = "0.3.0"
authors = ["Jens Braun <jens.braun@student.kit.edu>"]
edition = "2021"

[dependencies]
rand_pcg = "0.3"
rand = "0.8"
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "histogram"]}
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false }
libloading = "0.8"
indicatif = { version = "0.17"}
clap = { version = "4.5", features = ["derive"] }
ouroboros = "0.18"
serde_json = "1.0"
procspawn = "1.0"
tempfile = "3.10"
plotters-backend = "0.3"

[[bin]]
name = "blhacmp"
path = "src/main.rs"